--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,10 @@ logging.level.org.hibernate=error
 # ----------------------------------------
 # MySQL DataBase Connection Properties
 # ----------------------------------------
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost/demo-quality
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost/quality
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 
