--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ logging.level.org.hibernate=error
 # ----------------------------------------
 # MySQL DataBase Connection Properties
 # ----------------------------------------
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost/quality
 spring.datasource.username=root
 spring.datasource.password=root
