--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,31 +1,28 @@
-# Default properties file
+# Archivo de propiedades por defecto
 
 spring:
+  output:
+    ansi:
+      enabled: always # permite ver el log como colores
+  jackson:
+    date-format: yyyy-MM-dd
+    default-property-inclusion: non_null
   profiles:
-    active: ${SCOPE_SUFFIX} # Comma-separated list of active profiles. Can be overridden by a command line switch.
-  resources:
-    add-mappings: false # Whether to enable default resource handling.
+    active: ${SCOPE_SUFFIX} # Lista de perfiles activos separados por comas. Puede ser anulado por un modificador de línea de comando.
+
   mvc:
-    throw-exception-if-no-handler-found: true # Whether a "NoHandlerFoundException" should be thrown if no Handler was found to process a request.
+    throw-exception-if-no-handler-found: true # Si se debe lanzar una "NoHandlerFoundException" si no se encontró ningún controlador para procesar una solicitud.
 server:
   compression:
-    enabled: true # Whether response compression is enabled.
+    enabled: true # Si la compresión de respuesta está habilitada.
     mime-types: text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json # Comma-separated list of MIME types that should be compressed.
     min-response-size: 1024 # Minimum "Content-Length" value that is required for compression to be performed.
+  error:
+    include-stacktrace: never # No mostrara la traza de errores en json.
 
-springdoc:
-  api-docs:
-    enabled: true
-    path: /v1/api-docs
-  paths-to-match: /**
-  packages-to-scan: com.example.demo.controllers
-  show-actuator: true
-  swagger-ui:
-    operations-sorter: alpha
-    disable-swagger-default-url: true
-    path: /swagger-ui.html
 
-app:
-  title: Demo Quality
-  description: Aplicacion completa de Demo Quality
-  version: @project.version@
+logging:
+  level:
+    root: info # permite ver los logs de consola
+
+
