--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,13 +2,10 @@
 # You need to configure the environment variable in your IDE, more info in README.md
 # Overrides application.yml default properties
 spring:
-  jackson:
-    date-format: yyyy-MM-dd
   datasource:
     #initialization-mode: always
     #data: classpath:/data.sql
-    driver:
-      class: com.mysql.cj.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 #    url: jdbc:mysql://proxysql.master.meliseginf.com:6612/[NombreDBMELI]?useSSL=true&serverTimezone=UTC&characterEncoding=UTF-8
 #    username: ${LOCAL_DB_USER}
 #    password: ${LOCAL_DB_PASS}
@@ -17,7 +14,9 @@ spring:
     password: ${LOCAL_DB_PASSWORD}
 
 
+
   jpa:
+    open-in-view: true
     database: mysql
     show-sql: true
     hibernate:
@@ -29,3 +28,4 @@ spring:
 
 server:
   port: 8081 # no cambiar en prod
+
